feat: novo cardapio

--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -127,10 +127,10 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="menu-slider">
-                    <div class="menu-item" data-name="Frango grelhado com cúrcuma">
-                        <img src="../../assets/prato1.png" alt="Frango grelhado com arroz de cúrcuma e vinagrete de feijão-fradinho">
-                        <h3>Frango Grelhado com Cúrcuma</h3>
-                        <p class="item-description">Peito de frango grelhado, rico em proteína e baixo em gordura, servido com arroz de cúrcuma antioxidante e vinagrete de feijão-fradinho cheio de fibras.</p>
+                    <div class="menu-item" data-name="Macarrão sem glúten à bolonhesa">
+                        <img src="../../assets/macarrao.jpg" alt="Macarrão sem glúten à bolonhesa com molho de tomate artesanal">
+                        <h3>Macarrão Sem Glúten à Bolonhesa</h3>
+                        <p class="item-description">Fusilli sem glúten com molho bolonhesa de patinho magro, rico em proteína e com molho de tomate artesanal cheio de sabor.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -139,10 +139,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Almôndegas de patinho com macarrão sem glúten">
-                        <img src="../../assets/prato2.png" alt="Almôndegas de patinho com macarrão sem glúten e legumes">
-                        <h3>Almôndegas de Patinho & Fusilli</h3>
-                        <p class="item-description">Almôndegas de patinho magro em molho artesanal, com massa sem glúten e seleta de legumes levinhos para manter a dieta em dia.</p>
+                    <div class="menu-item" data-name="Estrogonofe de frango com arroz de cenoura e mix de legumes">
+                        <img src="../../assets/estrogonofe%20de%20frango.jpg" alt="Estrogonofe de frango com arroz de cenoura e mix de legumes">
+                        <h3>Estrogonofe de Frango Fit</h3>
+                        <p class="item-description">Estrogonofe de frango cremoso com creme de leite leve, arroz com cenoura e mix de legumes salteados para completar a refeição.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -151,10 +151,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Peixe ao molho de ervas com arroz de sementes">
-                        <img src="../../assets/prato3.png" alt="Peixe ao molho de ervas com arroz de sementes e mix de legumes">
-                        <h3>Peixe ao Molho de Ervas</h3>
-                        <p class="item-description">Filé de peixe ao forno com ervas frescas, arroz com sementes e mix de legumes para uma refeição leve e rica em ômega-3.</p>
+                    <div class="menu-item" data-name="Lasanha de abobrinha com frango e ricota">
+                        <img src="../../assets/Lasanha%20de%20beringela.jpg" alt="Lasanha de abobrinha com frango e ricota cremosa">
+                        <h3>Lasanha de Abobrinha com Frango</h3>
+                        <p class="item-description">Lâminas de abobrinha recheadas com frango desfiado e ricota fresca, gratinadas com molho de tomate leve e queijo magro.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -163,10 +163,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Escondidinho de macaxeira com filé mignon suíno">
-                        <img src="../../assets/prato4.png" alt="Escondidinho de macaxeira com filé mignon suíno">
-                        <h3>Escondidinho de Macaxeira & Filé Mignon Suíno</h3>
-                        <p class="item-description">Versão leve do clássico: filé mignon suíno desfiado, purê suave de macaxeira e gratinado leve para matar a saudade sem sair da dieta.</p>
+                    <div class="menu-item" data-name="Filé suíno com arroz integral e feijão-fradinho">
+                        <img src="../../assets/suino.jpg" alt="Filé suíno com arroz integral e feijão-fradinho">
+                        <h3>Filé Suíno & Integral</h3>
+                        <p class="item-description">Filé suíno grelhado, arroz integral soltinho e feijão-fradinho com ervas que entregam ferro, fibras e muito sabor.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -175,10 +175,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Cubos de frango com arroz integral e purê de abóbora">
-                        <img src="../../assets/prato5.jpeg" alt="Cubos de frango com arroz integral e purê de abóbora">
-                        <h3>Frango Integral & Purê Cremoso</h3>
-                        <p class="item-description">Frango em cubos temperado com ervas, arroz integral rico em fibras e purê de abóbora cremoso para energia limpa e saciedade.</p>
+                    <div class="menu-item" data-name="Hambúrguer artesanal com purê de batata-doce e arroz com cenoura">
+                        <img src="../../assets/hamburguer.jpg" alt="Hambúrguer artesanal com purê de batata-doce e arroz com cenoura">
+                        <h3>Hambúrguer Fit com Purê</h3>
+                        <p class="item-description">Carne de hambúrguer artesanal grelhada, purê de batata-doce aerado e arroz com cenoura para equilibrar proteínas e carboidratos.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
