Atualiza checkout e cardápio mensal

--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -139,12 +139,13 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="menu-slider">
-                    <div class="menu-item" data-name="Macarrão sem glúten à bolonhesa">
+                    <div class="menu-item"
+                        data-name="Bolonhesa de carne, arroz à grega e vinagrete de feijão fradinho">
                         <img src="../../assets/macarrao.jpg"
-                            alt="Macarrão sem glúten à bolonhesa com molho de tomate artesanal">
-                        <h3>Macarrão Sem Glúten à Bolonhesa</h3>
-                        <p class="item-description">Fusilli sem glúten com molho bolonhesa de patinho magro, rico em
-                            proteína e com molho de tomate artesanal cheio de sabor.</p>
+                            alt="Bolonhesa de carne, arroz à grega e vinagrete de feijão fradinho">
+                        <h3>Bolonhesa de Carne, Arroz à Grega e Vinagrete de Feijão Fradinho</h3>
+                        <p class="item-description">Bolonhesa de carne com molho caseiro, arroz à grega soltinho e
+                            vinagrete de feijão fradinho para um toque fresco.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -153,12 +154,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Estrogonofe de frango com arroz de cenoura e mix de legumes">
+                    <div class="menu-item" data-name="Rocambole de carne, purê de macaxeira e brócolis">
                         <img src="../../assets/estrogonofe%20de%20frango.jpg"
-                            alt="Estrogonofe de frango com arroz de cenoura e mix de legumes">
-                        <h3>Estrogonofe de Frango Fit</h3>
-                        <p class="item-description">Estrogonofe de frango cremoso com creme de leite leve, arroz com
-                            cenoura e mix de legumes salteados para completar a refeição.</p>
+                            alt="Rocambole de carne, purê de macaxeira e brócolis">
+                        <h3>Rocambole de Carne, Purê de Macaxeira e Brócolis</h3>
+                        <p class="item-description">Rocambole de carne assado, purê de macaxeira cremoso e brócolis no
+                            ponto para completar a refeição.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -167,12 +168,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Lasanha de abobrinha com frango e ricota">
+                    <div class="menu-item" data-name="Pernil suíno desfiado, arroz integral e mix de legumes">
                         <img src="../../assets/Lasanha%20de%20beringela.jpg"
-                            alt="Lasanha de abobrinha com frango e ricota cremosa">
-                        <h3>Lasanha de Abobrinha com Frango</h3>
-                        <p class="item-description">Lâminas de abobrinha recheadas com frango desfiado e ricota fresca,
-                            gratinadas com molho de tomate leve e queijo magro.</p>
+                            alt="Pernil suíno desfiado, arroz integral e mix de legumes">
+                        <h3>Pernil Suíno Desfiado, Arroz Integral e Mix de Legumes</h3>
+                        <p class="item-description">Pernil suíno desfiado e bem temperado, arroz integral soltinho e
+                            mix de legumes salteados.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -181,11 +182,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Filé suíno com arroz integral e feijão-fradinho">
-                        <img src="../../assets/suino.jpg" alt="Filé suíno com arroz integral e feijão-fradinho">
-                        <h3>Filé Suíno & Integral</h3>
-                        <p class="item-description">Filé suíno grelhado, arroz integral soltinho e feijão-fradinho com
-                            ervas que entregam ferro, fibras e muito sabor.</p>
+                    <div class="menu-item" data-name="Escondidinho de macaxeira com frango">
+                        <img src="../../assets/suino.jpg" alt="Escondidinho de macaxeira com frango">
+                        <h3>Escondidinho de Macaxeira com Frango</h3>
+                        <p class="item-description">Camadas de macaxeira cremosa com frango desfiado e temperos suaves,
+                            gratinado no forno.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
@@ -194,12 +195,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menu-item" data-name="Hambúrguer artesanal com purê de batata-doce e arroz com cenoura">
+                    <div class="menu-item" data-name="Macarrão com frango, legumes e creme de ricota">
                         <img src="../../assets/hamburguer.jpg"
-                            alt="Hambúrguer artesanal com purê de batata-doce e arroz com cenoura">
-                        <h3>Hambúrguer Fit com Purê</h3>
-                        <p class="item-description">Carne de hambúrguer artesanal grelhada, purê de batata-doce aerado e
-                            arroz com cenoura para equilibrar proteínas e carboidratos.</p>
+                            alt="Macarrão com frango, legumes e creme de ricota">
+                        <h3>Macarrão com Frango, Legumes e Creme de Ricota</h3>
+                        <p class="item-description">Macarrão com frango desfiado, legumes coloridos e creme de ricota
+                            leve para uma refeição equilibrada.</p>
                         <div class="item-footer">
                             <div class="quantity-selector">
                                 <button class="btn-qty minus" aria-label="Remover um">-</button>
