--- a/checkout/finalizar-pedido.html
+++ b/checkout/finalizar-pedido.html
@@ -84,19 +84,11 @@
                             <h3>Forma de Pagamento</h3>
                             <div class="payment-options">
                                 <label class="payment-option" for="pix" data-method="pix">
-                                    <input type="radio" id="pix" name="payment" value="pix">
+                                    <input type="radio" id="pix" name="payment" value="pix" checked>
                                     <div class="payment-details">
                                         <i class="fas fa-qrcode" aria-hidden="true"></i>
                                         <span>PIX</span>
                                         <small>Chave enviada no WhatsApp</small>
-                                    </div>
-                                </label>
-                                <label class="payment-option" for="cash" data-method="cash">
-                                    <input type="radio" id="cash" name="payment" value="cash">
-                                    <div class="payment-details">
-                                        <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
-                                        <span>Dinheiro</span>
-                                        <small>Pagamento na entrega</small>
                                     </div>
                                 </label>
                             </div>
