Adiciona novos combos de marmitas no site e dashboard

--- a/index.html
+++ b/index.html
@@ -61,35 +61,68 @@
                 <div class="pacote-card">
                   <picture>
                     <source type="image/webp" srcset="assets/prato8.webp" />
-                    <img src="assets/prato8.jpeg" width="600" height="596" loading="lazy" decoding="async" alt="Plano semanal com pratos leves e balanceados" />
+                    <img src="assets/prato8.jpeg" width="600" height="596" loading="lazy" decoding="async" alt="Combo praticidade com cinco marmitas" />
                   </picture>
-                  <h3>Plano Praticidade</h3><h4>5 marmitas (semanal)</h4>
+                  <h3>Combo Praticidade</h3><h4>5 marmitas</h4>
                   <p>Ideal para garantir seus almoços saudáveis durante a semana.</p>
                   <span class="price">R$ 110,00</span>
-                  <a href="login/login.html?package=semanal" class="btn btn-primary">Quero Esse</a>
+                  <a href="login/login.html?package=praticidade" class="btn btn-primary">Quero Esse</a>
                 </div>
-            
+
                 <div class="pacote-card popular">
                   <span class="tag">Mais Popular</span>
                   <picture>
                     <source type="image/webp" srcset="assets/prato9.webp" />
-                    <img src="assets/prato9.jpeg" width="600" height="608" loading="lazy" decoding="async" alt="Plano quinzenal com refeições fit e controladas" />
+                    <img src="assets/prato9.jpeg" width="600" height="608" loading="lazy" decoding="async" alt="Combo constância com dez marmitas" />
                   </picture>
-                  <h3>Plano Constância</h3><h4>10 marmitas (quinzenal)</h4>
+                  <h3>Combo Constância</h3><h4>10 marmitas</h4>
                   <p>Economia e praticidade para duas semanas de alimentação equilibrada.</p>
                   <span class="price">R$ 214,00</span>
-                  <a href="login/login.html?package=quinzenal" class="btn btn-primary">Quero Esse</a>
+                  <a href="login/login.html?package=constancia" class="btn btn-primary">Quero Esse</a>
                 </div>
-            
+
                 <div class="pacote-card">
                   <picture>
                     <source type="image/webp" srcset="assets/prato7.webp" />
-                    <img src="assets/prato7.jpeg" width="600" height="677" loading="lazy" decoding="async" alt="Plano mensal com refeições funcionais e nutritivas" />
+                    <img src="assets/prato7.jpeg" width="600" height="677" loading="lazy" decoding="async" alt="Combo foco com quinze marmitas" />
                   </picture>
-                  <h3>Plano Equilíbrio</h3><h4>20 marmitas (mensal)</h4>
+                  <h3>Combo Foco</h3><h4>15 marmitas</h4>
+                  <p>Um ritmo consistente para manter o planejamento alimentar no mês.</p>
+                  <span class="price">R$ 315,00</span>
+                  <a href="login/login.html?package=foco" class="btn btn-primary">Quero Esse</a>
+                </div>
+
+                <div class="pacote-card">
+                  <picture>
+                    <source type="image/webp" srcset="assets/prato8.webp" />
+                    <img src="assets/prato8.jpeg" width="600" height="596" loading="lazy" decoding="async" alt="Combo equilíbrio com vinte marmitas" />
+                  </picture>
+                  <h3>Combo Equilíbrio</h3><h4>20 marmitas</h4>
                   <p>A solução completa para um mês inteiro sem se preocupar com as refeições.</p>
                   <span class="price">R$ 419,00</span>
-                  <a href="login/login.html?package=mensal" class="btn btn-primary">Quero Esse</a>
+                  <a href="login/login.html?package=equilibrio" class="btn btn-primary">Quero Esse</a>
+                </div>
+
+                <div class="pacote-card">
+                  <picture>
+                    <source type="image/webp" srcset="assets/prato9.webp" />
+                    <img src="assets/prato9.jpeg" width="600" height="608" loading="lazy" decoding="async" alt="Combo performance com trinta marmitas" />
+                  </picture>
+                  <h3>Combo Performance</h3><h4>30 marmitas</h4>
+                  <p>Para quem quer alta constância e praticidade no dia a dia.</p>
+                  <span class="price">R$ 599,00</span>
+                  <a href="login/login.html?package=performance" class="btn btn-primary">Quero Esse</a>
+                </div>
+
+                <div class="pacote-card">
+                  <picture>
+                    <source type="image/webp" srcset="assets/prato7.webp" />
+                    <img src="assets/prato7.jpeg" width="600" height="677" loading="lazy" decoding="async" alt="Combo resultado com quarenta marmitas" />
+                  </picture>
+                  <h3>Combo Resultado</h3><h4>40 marmitas</h4>
+                  <p>Máxima cobertura para foco total em resultado e organização.</p>
+                  <span class="price">R$ 759,00</span>
+                  <a href="login/login.html?package=resultado" class="btn btn-primary">Quero Esse</a>
                 </div>
               </div>
           </section>
